# sam2_labelling

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  claude.ps1  pyproject.toml  run.bat
auto_labelling/: main.py
auto_labelling/app/: constants.py  main_window.py  theme.py
auto_labelling/models/: annotation.py  project.py  track.py
auto_labelling/services/: export_service.py  sam_service.py  video_service.py
auto_labelling/utils/: commands.py  session.py  shortcuts.py
auto_labelling/widgets/: canvas.py  extract_dialog.py  properties.py  shortcuts_dialog.py  timeline.py  track_list.py
docs/adr/: 0001-sam2-over-grounded-sam.md
docs/handoff/: 2026-05-27.md
docs/plans/: implementation-plan.md
